Bug 867891 - Add touch events to the popup blocker whitelist. r=smaug